test/compile_errors/stage1/obj/unused_variable_error_on_errdefer.zig
fn foo() !void {
    errdefer |a| unreachable;
    return error.A;
}
export fn entry() void {
    foo() catch unreachable;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:15: error: unused variable: 'a'
